--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "axios": "^0.7.0",
     "react": "^0.14.0",
-    "react-dom": "^0.14.0"
+    "react-dom": "^0.14.0",
+    "webpack-dev-server": "^1.12.1"
   },
   "devDependencies": {
     "babel-core": "^5.8.29",
