--- a/package.json
+++ b/package.json
@@ -18,14 +18,19 @@
   "homepage": "https://github.com/Jpadilla1/react-workshop#readme",
   "dependencies": {
     "axios": "^0.7.0",
+    "radium": "^0.14.3",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
+    "react-fa": "^4.0.0",
     "webpack-dev-server": "^1.12.1"
   },
   "devDependencies": {
     "babel-core": "^5.8.29",
     "babel-loader": "^5.3.2",
     "babel-runtime": "^5.8.29",
+    "css-loader": "^0.21.0",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.6",
     "webpack": "^1.12.2"
   }
 }
